// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaBoxesSection renders a Custom Fields option 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-0"
              style="--wp-components-flex-item-display: block;"
            >
              Custom fields
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`MetaBoxesSection renders a Custom Fields option and meta box options 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-3"
              style="--wp-components-flex-item-display: block;"
            >
              Custom fields
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-4"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-4"
              style="--wp-components-flex-item-display: block;"
            >
              Meta Box 1
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-5"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-5"
              style="--wp-components-flex-item-display: block;"
            >
              Meta Box 2
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`MetaBoxesSection renders meta box options 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-1"
              style="--wp-components-flex-item-display: block;"
            >
              Meta Box 1
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-start;"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="style-item style-block components-flex-item components-flex-block components-toggle-control__label"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-2"
              style="--wp-components-flex-item-display: block;"
            >
              Meta Box 2
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;
